it was slightly uneven, the collapsed collapsibles div thing. so i fixed it now!
ye

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ input[type='checkbox'] {
 }
 
 .collapsible-content {
-  max-height: 54px;
+  max-height: 56px;
   overflow: hidden;
   transition: max-height .1s ease-in-out;
   border-radius: 12px;
